@@ -518,6 +518,9 @@ install-signed-template_$(ARCH):
 install-udeb_$(ARCH): export KW_DEFCONFIG_DIR=debian/installer
 install-udeb_$(ARCH): export KW_CONFIG_DIR=debian/installer/$(ARCH)
 install-udeb_$(ARCH): DH_OPTIONS=$(PACKAGE_NAMES:%=-p%)
+ifeq ($(UDEB_UNSIGNED_TEST_BUILD),True)
+install-udeb_$(ARCH): export DEB_BUILD_PROFILES=pkg.linux.udeb-unsigned-test-build
+endif
 install-udeb_$(ARCH):
 	dh_testdir
 	dh_prep
