@@ -51,6 +51,7 @@ linux (4.16-1~exp1) UNRELEASED; urgency=medium
     changelog
   * debian/rules.d/tools/lib/lockdep/Makefile: Fix repeated 'make install'
   * Add template source package to support code signing
+  * Use a dummy build profile for udebs that we test-build before signing
 
  -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 23 Mar 2018 21:10:34 +0900
 
